--- a/Presentation/VendingMachine.WebApp/packages.config
+++ b/Presentation/VendingMachine.WebApp/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="2.0.1" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
@@ -24,8 +25,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="Unity" version="5.1.2" targetFramework="net461" />
+  <package id="Unity" version="5.5.0" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Unity.AspNet.WebApi" version="5.0.11" targetFramework="net461" />
   <package id="Unity.Container" version="5.5.0" targetFramework="net461" />
   <package id="Unity.Mvc" version="5.0.11" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
