--- a/VendingMachine.Entity/VendingMachine.Entity.csproj
+++ b/VendingMachine.Entity/VendingMachine.Entity.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
