--- a/VendingMachine.Entity/VendingMachine.Entity.csproj
+++ b/VendingMachine.Entity/VendingMachine.Entity.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Combination.cs" />
     <Compile Include="Composition.cs" />
+    <Compile Include="ForbiddenCombination.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductType.cs" />
